finish section 1 and 3

--- a/index.html
+++ b/index.html
@@ -10,12 +10,46 @@
     <div id="first-half">
         <div id="odin-container">
             <img src="img/odin-lined.png" alt="odin logo">
-            <div id="odin">Odin Project</div>
+            <div id="odin">Odin</div>
         </div>
         <div id="credits">Photo by <a href="https://unsplash.com/pt-br/@haliewestphoto" target="_blank">Halie West</a>, on <a href="https://unsplash.com/" target="_blank">Unsplash</a></div>
     </div>
     <div id="second-half">
-        <p>Form</p>
+        <div id="section-one">
+            <h2>This is not a real online service! You know you need something</h2> 
+            <h2>like this in your life to help you realize your deepest dreams.</h2> 
+            <h2>Sign up <i>now</i> to get started.</h2>
+            <h2 id="you-know">You <i>know</i> you want to.</h2>
+        </div>
+
+        <div id="section-two">
+            <h2>Let's do this!</h2>
+            <form action="" method="post">
+                <label for="first_name">First Name</label>
+                <input type="text" id="first_name">
+
+                <label for="last_name">Last Name</label>
+                <input type="text" id="last_name">
+
+                <label for="email">Email</label>
+                <input type="email" id="email">
+
+                <label for="phone_number">Phone number</label>
+                <input type="tel" id="phone_number">
+
+                <label for="password">Password</label>
+                <input type="password" id="password">
+
+                <label for="confirm_password">Confirm Password</label>
+                <input type="password" id="confirm_password">
+            </form>
+        </div>
+
+        <div id="section-three">
+            <button type="submit" id="submit">Create Account</button>
+            <h4>Already have an account? <a href="" id="login">Log in</a></h4>
+        </div>
+
     </div>
     
 </body>
