--- a/index.html
+++ b/index.html
@@ -23,25 +23,45 @@
         </div>
 
         <div id="section-two">
-            <h2>Let's do this!</h2>
             <form action="" method="post">
-                <label for="first_name">First Name</label>
-                <input type="text" id="first_name">
 
-                <label for="last_name">Last Name</label>
-                <input type="text" id="last_name">
+                <h2 id="lets-do-it">Let's do this!</h2>
 
-                <label for="email">Email</label>
-                <input type="email" id="email">
+                <div id="line-one">
+                    <div id="first-name">
+                        <label for="first_name">First Name</label>
+                        <input type="text" id="first_name">
+                    </div>
 
-                <label for="phone_number">Phone number</label>
-                <input type="tel" id="phone_number">
+                    <div id="last-name">
+                        <label for="last_name">Last Name</label>
+                        <input type="text" id="last_name">
+                    </div>
+                </div>
 
-                <label for="password">Password</label>
-                <input type="password" id="password">
+                <div id="line-two">
+                    <div id="email">
+                        <label for="email">Email</label>
+                        <input type="email" id="email_input">
+                    </div>
 
-                <label for="confirm_password">Confirm Password</label>
-                <input type="password" id="confirm_password">
+                    <div id="tel">
+                        <label for="phone_number">Phone number</label>
+                        <input type="tel" id="phone_number">
+                    </div>
+                </div>
+
+                <div id="line-three">
+                    <div id="password">
+                        <label for="password">Password</label>
+                        <input type="password" id="password_input">
+                    </div>
+
+                    <div id="confirm-password">
+                        <label for="confirm_password">Confirm Password</label>
+                        <input type="password" id="password_input">
+                </div>
+            </div>
             </form>
         </div>
 
