--- a/index.html
+++ b/index.html
@@ -29,37 +29,37 @@
 
                 <div id="line-one">
                     <div id="first-name">
-                        <label for="first_name">First Name</label>
-                        <input type="text" id="first_name">
+                        <label for="first_name">FIRST NAME</label>
+                        <input type="text" id="first_name" name="firstName">
                     </div>
 
                     <div id="last-name">
-                        <label for="last_name">Last Name</label>
-                        <input type="text" id="last_name">
+                        <label for="last_name">LAST NAME</label>
+                        <input type="text" id="last_name" name="lastName">
                     </div>
                 </div>
 
                 <div id="line-two">
                     <div id="email">
-                        <label for="email">Email</label>
-                        <input type="email" id="email_input">
+                        <label for="email">EMAIL</label>
+                        <input type="email" id="email_input" name="email">
                     </div>
 
                     <div id="tel">
-                        <label for="phone_number">Phone number</label>
-                        <input type="tel" id="phone_number">
+                        <label for="phone_number">PHONE NUMBER</label>
+                        <input type="tel" id="phone_number" name="tel">
                     </div>
                 </div>
 
                 <div id="line-three">
                     <div id="password">
-                        <label for="password">Password</label>
-                        <input type="password" id="password_input">
+                        <label for="password">PASSWORD</label>
+                        <input type="password" id="password_input" name="password" required>
                     </div>
 
                     <div id="confirm-password">
-                        <label for="confirm_password">Confirm Password</label>
-                        <input type="password" id="password_input">
+                        <label for="confirm_password">CONFIRM PASSWORD</label>
+                        <input type="password" id="password_input" name="confirmPassword" required>
                 </div>
             </div>
             </form>
